# abc

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  CMakeSettings.json  Folder.DotSettings  README.md  vcpkg.json  vcpkg.winonly.json
include/abc/: bigint.h  byte.h  byte_bit_numbering.h  bytes.h  bytes_decl.h  bytes_fwd.h  bytes_fwd_decl.h  bytes_view.h  bytes_view_decl.h  bytes_view_fwd_decl.h  case_insensitive_string.h  char_traits_case_insensitive.h  clonable.h  clonable_decl.h  clonable_fwd_decl.h  config.h  converter.h  error.h  expected.h  fixed_bytes.h  fixed_bytes_decl.h  fixed_bytes_fwd_decl.h  fixed_hash.h  fixed_hash_decl.h  hex_string.h  hex_string_decl.h  hex_string_format.h  hex_string_fwd.h  hex_string_fwd_decl.h  hex_utility.h  memory.h  optional.h  optional_decl.h  optional_fwd_decl.h  result.h  scope_guard.h  scope_guard_decl.h  scope_guard_fwd_decl.h  simple_converter.h  timer.h  (+4 more)
include/abc/async/: queue.h  queue_decl.h  queue_fwd_decl.h
include/abc/details/: byte.h  byte_bit_numbering.h  byte_numbering_decl.h  byte_numbering_fwd_decl.h  bytes.h  bytes_fwd.h  case_insensitive_string.h  char_traits_case_insensitive.h  config.h  cxx11_config.h  cxx14_config.h  cxx17_config.h  cxx20_config.h  cxx23_config.h  error.h  fixed_bytes.h  fixed_hash.h  hex_string.h  hex_string_format.h  hex_string_fwd.h  optional_storage.h  optional_storage_decl.h  optional_storage_fwd_decl.h  timer.h  timer_driver.h  type_traits.h  uint128_storage.h
include/abc/details/cxx11/: config.h  optional_storage.h  optional_storage_decl.h  type_traits.h  utility.h
include/abc/details/cxx14/: config.h
include/abc/details/cxx17/: config.h
include/abc/details/cxx20/: config.h
include/abc/details/cxx23/: config.h
include/abc/details/endian/: bytes.h
include/abc/endian/: bytes.h
src/: bytes.cpp  error.cpp  hex_string.cpp  hex_utility.cpp  timer.cpp  timer_driver.cpp
tests/: CMakeLists.txt  bytes.cpp  bytes_view.cpp  clonable.cpp  converters.cpp  expected.cpp  fixed_bytes.cpp  hex_string.cpp  hex_utility.cpp  is_swappable.cpp  macro.cpp  memory.cpp  result.cpp  scope_guard.cpp  tl_expected_assignment.cpp  tl_expected_bases.cpp  type_traits.cpp
tests/async/: queue.cpp
tests/tl_expected/: tl_expected_assertions.cpp  tl_expected_assignment.cpp  tl_expected_bases.cpp  tl_expected_constructors.cpp  tl_expected_emplace.cpp  tl_expected_extensions.cpp  tl_expected_observers.cpp  tl_expected_relops.cpp  tl_expected_swap.cpp
tests/uint128/: accessors.cpp  add.cpp  and.cpp  assignment.cpp  constructor.cpp  div.cpp  equals.cpp  fix.cpp  functions.cpp  gt.cpp  gte.cpp  invert.cpp  leftshift.cpp  logical.cpp  lt.cpp  lte.cpp  mod.cpp  mult.cpp  notequals.cpp  or.cpp  rightshift.cpp  sub.cpp  type_traits.cpp  typecast.cpp  unary.cpp  xor.cpp
